@@ -15,6 +15,19 @@ To compile the application, I used the command
 ```bash
 javac -encoding UTF-8 --source-path src -d dist src/*.java
 ```
+To compile the tests, I used the command
+```bash
+javac -encoding UTF-8 --source-path test -d dist -cp lib/junit-platform-console-standalone-1.7.1.jar test/*.java src/*.java
+``` 
+
+To run the application, I used the command
+```bash
+java --add-opens java.base/java.lang=ALL-UNNAMED -jar  user-registration-app-0.1.0.jar
+```
+To run the tests, I used the command
+```bash
+java -jar lib/junit-platform-console-standalone-1.7.1.jar --class-path dist --scan-class-path
+```
 
 ![image](https://user-images.githubusercontent.com/55165117/119868541-2871b800-beed-11eb-9acd-892fc2301910.png)
 
